--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <p><strong>RUNWAY TO RUIN: A Dark Billionaire Romance</strong></p>
   <p><em>ONE LOOK. ONE NIGHT. ONE DECISION THAT CHANGES EVERYTHING.</em></p>
 
-  <p>Selene Rowe is done playing nice. Too ordinary for the runway. Too soft for the city. Until a stranger stops her in the rain—and sees her like no one else ever has.</p>
+  <p>Selene Rowe is done playing nice., Too ordinary for the runway. Too soft for the city. Until a stranger stops her in the rain—and sees her like no one else ever has.</p>
 
   <p>He's older. And he doesn't ask twice. Richer. Dangerous. Drawn into a world of masks, power, and obsession, Selene finds herself claimed by a man who controls everything—except her heart. He gives her attention. Purpose. Pleasure beyond anything she imagined.</p>
 
