--- a/index.html
+++ b/index.html
@@ -3,73 +3,122 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dahlia Knight | Author</title>
+  <title>Dahlia Knight | Dark Romance Author</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    body {
+    * {
+      box-sizing: border-box;
       margin: 0;
-      font-family: "Georgia", serif;
-      background-color: #0e0e0e;
-      color: #eee;
-      max-width: 800px;
-      padding: 3rem 1.5rem;
-      margin: auto;
-      line-height: 1.7;
+      padding: 0;
     }
-    h1, h2 {
-      font-weight: 400;
-      text-transform: uppercase;
-      letter-spacing: 1px;
+    body {
+      font-family: 'Inter', sans-serif;
+      background-color: #0d0d0d;
+      color: #eaeaea;
+      line-height: 1.7;
+      padding: 2rem 1rem;
+    }
+    .container {
+      max-width: 800px;
+      margin: auto;
+    }
+    .hero {
+      text-align: center;
+      margin-bottom: 3rem;
+    }
+    .hero h1 {
+      font-family: 'Playfair Display', serif;
+      font-size: 2.8rem;
+      font-weight: 700;
+      margin-bottom: 0.5rem;
+    }
+    .hero p {
+      font-size: 1.1rem;
+      color: #b0b0b0;
+    }
+    .portrait {
+      width: 180px;
+      border-radius: 12px;
+      margin: 2rem auto;
+      display: block;
+      box-shadow: 0 4px 30px rgba(0,0,0,0.4);
+    }
+    h2 {
+      font-family: 'Playfair Display', serif;
+      font-size: 1.6rem;
+      margin: 2rem 0 1rem;
+    }
+    .book-cover {
+      width: 100%;
+      max-width: 400px;
+      display: block;
+      margin: 1rem auto;
+      border-radius: 8px;
+      box-shadow: 0 4px 20px rgba(255, 107, 107, 0.2);
     }
     a {
       color: #ff6b6b;
       text-decoration: none;
       border-bottom: 1px solid #ff6b6b;
     }
-    img {
-      max-width: 100%;
-      display: block;
-      margin: 2rem 0;
-      border-radius: 9px;
-    }
     .center {
       text-align: center;
     }
-    .subtitle {
-      font-size: 1.1rem;
-      color: #ccc;
-      margin-top: -1rem;
+    .buy-link {
+      display: inline-block;
+      margin-top: 1.5rem;
+      padding: 0.7rem 1.2rem;
+      background: #ff6b6b;
+      color: #0d0d0d;
+      font-weight: 600;
+      text-decoration: none;
+      border-radius: 4px;
+      transition: background 0.3s ease;
+    }
+    .buy-link:hover {
+      background: #ff4c4c;
+    }
+    .spacer {
+      height: 2rem;
+    }
+    @media(max-width: 600px) {
+      .hero h1 { font-size: 2.2rem; }
+      .portrait { width: 140px; }
     }
   </style>
 </head>
 <body>
+  <div class="container">
+    <div class="hero">
+      <img src="Dahlia Knight_Portrait Dubai.png" alt="Dahlia Knight author portrait" class="portrait" />
+      <h1>Dahlia Knight</h1>
+      <p>Dark romance for readers who crave power, obsession, and surrender.</p>
+    </div>
 
-  <div class="center">
-    <h1>Dahlia Knight</h1>
-    <p class="subtitle">Dark Romance Author</p>
-    <img src="Dahlia Knight_Portrait Dubai.png" alt="Dahlia Knight author portrait" />
+    <p><strong>Dahlia Knight</strong> writes dark, decadent romance for readers who crave powerful men and the women who dare to ruin them. Born in India and now living in Dubai, Dahlia blends eastern mystery with western edge—crafting love stories where desire cuts deep, and surrender becomes power.</p>
+
+    <p>When she’s not writing, she’s wandering rooftop bars, collecting vintage perfume, and imagining new ways to make fictional billionaires kneel.</p>
+
+    <h2>Debut Novel: Runway to Ruin</h2>
+
+    <img src="Cover_small.jpg" alt="Runway to Ruin book cover" class="book-cover" />
+
+    <p><strong>RUNWAY TO RUIN: A Dark Billionaire Romance</strong></p>
+    <p><em>ONE LOOK. ONE NIGHT. ONE DECISION THAT CHANGES EVERYTHING.</em></p>
+
+    <p>Selene Rowe is done playing nice. Too ordinary for the runway. Too soft for the city. Until a stranger stops her in the rain—and sees her like no one else ever has.</p>
+
+    <p>He's older. And he doesn't ask twice. Richer. Dangerous. Drawn into a world of masks, power, and obsession, Selene finds herself claimed by a man who controls everything—except her heart. He gives her attention. Purpose. Pleasure beyond anything she imagined.</p>
+
+    <p>But behind his touch lies something darker. And the deeper she falls, the more she learns: This isn't just seduction. It's a war for control.</p>
+
+    <p><strong>A DARK BILLIONAIRE ROMANCE OF SUBMISSION, SURRENDER, AND THE POWER TO BLOOM.</strong></p>
+
+    <div class="center">
+      <a href="https://www.amazon.com/dp/YOUR-ASIN-HERE" class="buy-link" target="_blank">Read on Amazon</a>
+    </div>
+
+    <div class="spacer"></div>
   </div>
-
-  <p><strong>Dahlia Knight</strong> writes dark, decadent romance for readers who crave powerful men and the women who dare to ruin them. Born in India and now living in Dubai, Dahlia blends eastern mystery with western edge—crafting love stories where desire cuts deep, and surrender becomes power.</p>
-
-  <p>When she’s not writing, she’s wandering rooftop bars, collecting vintage perfume, and imagining new ways to make fictional billionaires kneel.</p>
-
-  <h2>Debut Novel: Runway to Ruin</h2>
-  <img src="Cover_small.jpeg" alt="Runway to Ruin book cover" />
-
-  <p><strong>RUNWAY TO RUIN: A Dark Billionaire Romance</strong></p>
-  <p><em>ONE LOOK. ONE NIGHT. ONE DECISION THAT CHANGES EVERYTHING.</em></p>
-
-  <p>Selene Rowe is done playing nice., Too ordinary for the runway. Too soft for the city. Until a stranger stops her in the rain—and sees her like no one else ever has.</p>
-
-  <p>He's older. And he doesn't ask twice. Richer. Dangerous. Drawn into a world of masks, power, and obsession, Selene finds herself claimed by a man who controls everything—except her heart. He gives her attention. Purpose. Pleasure beyond anything she imagined.</p>
-
-  <p>But behind his touch lies something darker. And the deeper she falls, the more she learns: This isn't just seduction. It's a war for control.</p>
-
-  <p><strong>A DARK BILLIONAIRE ROMANCE OF SUBMISSION, SURRENDER, AND THE POWER TO BLOOM.</strong></p>
-
-  <p class="center">
-    <a href="https://www.amazon.com/dp/YOUR-ASIN-HERE" target="_blank">Buy on Amazon</a>
-  </p>
-
 </body>
 </html>
