--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dahlia Knight | Dark Romance Author</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <title>Dahlia Knight | Author</title>
+  <link href="https://fonts.googleapis.com/css2?family=Georgia&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
   <style>
     * {
       box-sizing: border-box;
@@ -12,54 +12,89 @@
       padding: 0;
     }
     body {
-      font-family: 'Inter', sans-serif;
-      background-color: #0d0d0d;
+      background-color: #0a0a0a;
       color: #eaeaea;
+      font-family: 'Montserrat', sans-serif;
       line-height: 1.7;
-      padding: 2rem 1rem;
     }
-    .container {
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
+    .topbar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1.5rem 2rem;
+      border-bottom: 1px solid #1a1a1a;
+    }
+    .topbar h1 {
+      font-family: 'Montserrat', sans-serif;
+      font-size: 1.6rem;
+      font-weight: 600;
+      letter-spacing: 1px;
+    }
+    .cta-button {
+      background: #ff6b6b;
+      color: #0a0a0a;
+      padding: 0.7rem 1.4rem;
+      border-radius: 4px;
+      font-weight: 600;
+      transition: background 0.3s ease;
+    }
+    .cta-button:hover {
+      background: #ff3b3b;
+    }
+    .hero {
+      display: flex;
+      flex-wrap: wrap;
+      padding: 3rem 2rem;
+      align-items: center;
+      justify-content: center;
+    }
+    .hero-text {
+      flex: 1;
+      min-width: 280px;
+      padding-right: 2rem;
+    }
+    .hero-text h2 {
+      font-size: 1.2rem;
+      font-weight: 400;
+      color: #b0b0b0;
+      margin-bottom: 1rem;
+    }
+    .hero-text p {
+      font-size: 1.05rem;
+      max-width: 500px;
+    }
+    .hero-img {
+      flex: 1;
+      min-width: 280px;
+      text-align: center;
+    }
+    .hero-img img {
+      width: 100%;
+      max-width: 320px;
+      border-radius: 12px;
+      box-shadow: 0 0 40px rgba(0, 0, 0, 0.4);
+    }
+    .section {
+      padding: 2rem;
       max-width: 800px;
       margin: auto;
     }
-    .hero {
-      text-align: center;
-      margin-bottom: 3rem;
-    }
-    .hero h1 {
-      font-family: 'Playfair Display', serif;
-      font-size: 2.8rem;
-      font-weight: 700;
-      margin-bottom: 0.5rem;
-    }
-    .hero p {
-      font-size: 1.1rem;
-      color: #b0b0b0;
-    }
-    .portrait {
-      width: 180px;
-      border-radius: 12px;
-      margin: 2rem auto;
-      display: block;
-      box-shadow: 0 4px 30px rgba(0,0,0,0.4);
-    }
-    h2 {
-      font-family: 'Playfair Display', serif;
+    .section h2 {
+      font-family: 'Georgia', serif;
       font-size: 1.6rem;
-      margin: 2rem 0 1rem;
+      margin-bottom: 1rem;
     }
     .book-cover {
       width: 100%;
       max-width: 400px;
       display: block;
-      margin: 1rem auto;
+      margin: 1.5rem auto;
       border-radius: 8px;
-      box-shadow: 0 4px 20px rgba(255, 107, 107, 0.2);
-    }
-    a {
-      color: #ff6b6b;
-      text-decoration: none;
-      border-bottom: 1px solid #ff6b6b;
+      box-shadow: 0 6px 30px rgba(255, 107, 107, 0.3);
     }
     .center {
       text-align: center;
@@ -78,30 +113,39 @@
     .buy-link:hover {
       background: #ff4c4c;
     }
-    .spacer {
-      height: 2rem;
-    }
-    @media(max-width: 600px) {
-      .hero h1 { font-size: 2.2rem; }
-      .portrait { width: 140px; }
+    @media(max-width: 768px) {
+      .hero {
+        flex-direction: column;
+        padding: 2rem 1.5rem;
+      }
+      .hero-text {
+        padding-right: 0;
+        text-align: center;
+      }
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="hero">
-      <img src="Dahlia Knight_Portrait Dubai.png" alt="Dahlia Knight author portrait" class="portrait" />
-      <h1>Dahlia Knight</h1>
-      <p>Dark romance for readers who crave power, obsession, and surrender.</p>
+
+  <div class="topbar">
+    <h1>Dahlia Knight</h1>
+    <a href="https://www.amazon.com/dp/YOUR-ASIN-HERE" class="cta-button" target="_blank">Read on Amazon</a>
+  </div>
+
+  <section class="hero">
+    <div class="hero-text">
+      <h2>Dark Romance Author</h2>
+      <p><strong>Dahlia Knight</strong> writes dark, decadent romance for readers who crave powerful men and the women who dare to ruin them. Born in India and now living in Dubai, Dahlia blends eastern mystery with western edge—crafting love stories where desire cuts deep, and surrender becomes power.</p>
+      <p>When she’s not writing, she’s wandering rooftop bars, collecting vintage perfume, and imagining new ways to make fictional billionaires kneel.</p>
     </div>
+    <div class="hero-img">
+      <img src="Dahlia Knight_Portrait Dubai.png" alt="Dahlia Knight Author Portrait" />
+    </div>
+  </section>
 
-    <p><strong>Dahlia Knight</strong> writes dark, decadent romance for readers who crave powerful men and the women who dare to ruin them. Born in India and now living in Dubai, Dahlia blends eastern mystery with western edge—crafting love stories where desire cuts deep, and surrender becomes power.</p>
-
-    <p>When she’s not writing, she’s wandering rooftop bars, collecting vintage perfume, and imagining new ways to make fictional billionaires kneel.</p>
-
+  <section class="section">
     <h2>Debut Novel: Runway to Ruin</h2>
-
-    <img src="Cover_small.jpg" alt="Runway to Ruin book cover" class="book-cover" />
+    <img src="Cover_small.jpg" alt="Runway to Ruin Book Cover" class="book-cover" />
 
     <p><strong>RUNWAY TO RUIN: A Dark Billionaire Romance</strong></p>
     <p><em>ONE LOOK. ONE NIGHT. ONE DECISION THAT CHANGES EVERYTHING.</em></p>
@@ -115,10 +159,9 @@
     <p><strong>A DARK BILLIONAIRE ROMANCE OF SUBMISSION, SURRENDER, AND THE POWER TO BLOOM.</strong></p>
 
     <div class="center">
-      <a href="https://www.amazon.com/dp/YOUR-ASIN-HERE" class="buy-link" target="_blank">Read on Amazon</a>
+      <a href="https://www.amazon.com/dp/YOUR-ASIN-HERE" class="buy-link" target="_blank">Buy Now on Amazon</a>
     </div>
+  </section>
 
-    <div class="spacer"></div>
-  </div>
 </body>
 </html>
