--- a/index.html
+++ b/index.html
@@ -155,8 +155,10 @@
         }
 
         .author-photo {
-            background: url('dahlia.png') no-repeat center;
-            background-size: contain;
+            background-image: url('./dahlia.png');
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
             height: 500px;
             border-radius: 15px;
             box-shadow: 0 20px 60px rgba(139, 0, 0, 0.3);
