--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         }
 
         .author-photo {
-            background: url('dahlia.png');
+            background-image: url('dahlia.png');
             background-repeat: no-repeat;
             background-position: center;
             background-size: cover;
