--- a/index.html
+++ b/index.html
@@ -217,7 +217,8 @@
         }
 
         .book-cover {
-            height: 500px;
+            height: 400px;
+            width: 300px;
             border-radius: 10px;
             box-shadow: 0 20px 60px rgba(139, 0, 0, 0.4);
             position: relative;
@@ -226,6 +227,7 @@
             align-items: center;
             justify-content: center;
             background: #1a1a1a;
+            margin: 0 auto;
         }
 
         .book-cover img {
