--- a/index.html
+++ b/index.html
@@ -505,8 +505,8 @@
             
             <div class="social-links">
                 <a href="mailto:knightdahlia@proton.me" class="social-link">Email Me</a>
-                <a href="#" class="social-link">TikTok</a>
-                <a href="#" class="social-link">Amazon</a>
+                <a href="#" class="https://www.tiktok.com/@dahlia.knight">TikTok</a>
+                <a href="#" class="https://www.amazon.com/dp/B0F88DGGGC">Amazon</a>
             </div>
         </div>
     </section>
